// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`counterIncrement renders 0 1`] = `
Array [
  .c0 {
  counter-increment: 0;
}

<div
    className="c0"
  />,
  .c0 {
  counter-increment: 0;
}

<div
    className="c0"
  />,
  .c0 {
  counter-increment: 0;
}

<div
    className="c0"
  />,
  .c0 {
  counter-increment: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`counterIncrement renders function 1`] = `
Array [
  .c0 {
  counter-increment: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  counter-increment: has;
}

<div
    className="c0"
  />,
  .c0 {
  counter-increment: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  counter-increment: has;
}

<div
    className="c0"
  />,
]
`;

exports[`counterIncrement renders invalid theme path 1`] = `
Array [
  .c0 {
  counter-increment: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  counter-increment: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  counter-increment: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  counter-increment: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`counterIncrement renders negative number 1`] = `
Array [
  .c0 {
  counter-increment: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  counter-increment: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  counter-increment: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  counter-increment: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`counterIncrement renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  counter-increment: July;
}

@media screen and (min-width:November) {
  .c0 {
    counter-increment: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    counter-increment: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    counter-increment: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    counter-increment: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  counter-increment: July;
}

@media screen and (min-width:November) {
  .c0 {
    counter-increment: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    counter-increment: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    counter-increment: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    counter-increment: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  counter-increment: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    counter-increment: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    counter-increment: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    counter-increment: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    counter-increment: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  counter-increment: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    counter-increment: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    counter-increment: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    counter-increment: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    counter-increment: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`counterIncrement renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    counter-increment: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    counter-increment: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    counter-increment: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    counter-increment: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    counter-increment: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    counter-increment: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    counter-increment: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    counter-increment: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    counter-increment: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    counter-increment: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    counter-increment: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    counter-increment: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    counter-increment: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    counter-increment: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    counter-increment: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    counter-increment: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`counterIncrement renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  counter-increment: July;
}

@media May {
  .c0 {
    counter-increment: August;
  }
}

@media April {
  .c0 {
    counter-increment: September;
  }
}

@media January {
  .c0 {
    counter-increment: November;
  }
}

@media April {
  .c0 {
    counter-increment: August;
  }
}

@media June {
  .c0 {
    counter-increment: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  counter-increment: July;
}

@media May {
  .c0 {
    counter-increment: August;
  }
}

@media April {
  .c0 {
    counter-increment: September;
  }
}

@media January {
  .c0 {
    counter-increment: November;
  }
}

@media April {
  .c0 {
    counter-increment: August;
  }
}

@media June {
  .c0 {
    counter-increment: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  counter-increment: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    counter-increment: November;
  }
}

@media April {
  .c0 {
    counter-increment: January;
  }
}

@media January {
  .c0 {
    counter-increment: December;
  }
}

@media April {
  .c0 {
    counter-increment: April;
  }
}

@media June {
  .c0 {
    counter-increment: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  counter-increment: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    counter-increment: November;
  }
}

@media April {
  .c0 {
    counter-increment: January;
  }
}

@media January {
  .c0 {
    counter-increment: December;
  }
}

@media April {
  .c0 {
    counter-increment: April;
  }
}

@media June {
  .c0 {
    counter-increment: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`counterIncrement renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    counter-increment: July;
  }
}

@media April {
  .c0 {
    counter-increment: August;
  }
}

@media January {
  .c0 {
    counter-increment: September;
  }
}

@media April {
  .c0 {
    counter-increment: November;
  }
}

@media June {
  .c0 {
    counter-increment: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    counter-increment: July;
  }
}

@media April {
  .c0 {
    counter-increment: August;
  }
}

@media January {
  .c0 {
    counter-increment: September;
  }
}

@media April {
  .c0 {
    counter-increment: November;
  }
}

@media June {
  .c0 {
    counter-increment: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    counter-increment: January;
  }
}

@media April {
  .c0 {
    counter-increment: December;
  }
}

@media January {
  .c0 {
    counter-increment: April;
  }
}

@media April {
  .c0 {
    counter-increment: May;
  }
}

@media June {
  .c0 {
    counter-increment: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    counter-increment: January;
  }
}

@media April {
  .c0 {
    counter-increment: December;
  }
}

@media January {
  .c0 {
    counter-increment: April;
  }
}

@media April {
  .c0 {
    counter-increment: May;
  }
}

@media June {
  .c0 {
    counter-increment: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`counterIncrement renders postitive number 1`] = `
Array [
  .c0 {
  counter-increment: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  counter-increment: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  counter-increment: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  counter-increment: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`counterIncrement renders string 1`] = `
Array [
  .c0 {
  counter-increment: July;
}

<div
    className="c0"
  />,
  .c0 {
  counter-increment: July;
}

<div
    className="c0"
  />,
  .c0 {
  counter-increment: June;
}

<div
    className="c0"
  />,
  .c0 {
  counter-increment: June;
}

<div
    className="c0"
  />,
]
`;

exports[`counterIncrement renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`counterIncrement renders valid theme path 1`] = `
Array [
  .c0 {
  counter-increment: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  counter-increment: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  counter-increment: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  counter-increment: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
